--- a/css/css.css
+++ b/css/css.css
@@ -22,6 +22,9 @@ main {
 
 #projectpicture img {
 	width: 150px;
+	height : 150px;
+	border: 2px solid rgba(108,122,137,0.8);
+	border-radius: 5%;
 }
 #projectname {
 	display: inline-block;
