--- a/css/css.css
+++ b/css/css.css
@@ -1,7 +1,7 @@
 html, body {
 	margin: 0;
 	height: 100%;
-    min-width: 600px;
+    min-width: 500px;
 }
 
 * {
@@ -91,32 +91,31 @@ header {
 #projectheader {
     width: 100%;
 	height: 200px;
-	margin-left: 2%;
 }
 
 #projectpicture {
 	display: inline-block;
-    width: 25%;
+    width: 160px;
 }
 
 #projectpicture img {
-	width: 160px;
-	height : 150px;
+	width: 140px;
+	height : 130px;
 	border: 2px solid rgba(108,122,137,0.8);
 	border-radius: 5%;
 }
 /************************/
 #projectname {
 	display: inline-block;
-	width:80%;
+	width:70%;
 	vertical-align: top;
 	/*margin-top: 3%;*/
 	font-size: 1.5em;
 }
 #projectname p {
 	display: inline-block;
-	margin-top: 0px;
-    margin-left: 10%;
+	margin-top: 50px;
+    margin-left: 7%;
 
 }
 /*********************FIN--HEADER--PROJET*****************************/
@@ -261,6 +260,14 @@ main input[type="text"] {
 }
 
 /****************************MEDIA---SCREEN***************************/
+@media screen and (max-width: 1200px) {
+    #projectname{
+        width: 60%;
+    }
+    #projectname p{
+        margin-top: 10px;
+    }
+}
 @media screen and (max-width: 1150px) {
     .projectcontain{
         padding-left: 15%;
@@ -303,7 +310,19 @@ main input[type="text"] {
         display: none;
     }
     #menu li{
-        margin-left: 6%;
-        margin-right: 6%;
+        margin-left: 5%;
+        margin-right: 5%;
     }
+    #projectpicture img{
+        width: 140px;
+        height: 120px;
+    }
+    #projectname {
+        width: 50%;
+        font-size: 1.2em;
+    }
+    #projectheader{
+        height: 150px;
+    }
+
 }
